--- a/Project1/index.html
+++ b/Project1/index.html
@@ -57,7 +57,6 @@
             border-radius: 8px;
         }
 
-        /* Responsive Styles */
         @media (max-width: 768px) {
             .main-container{
                 padding: 20px;
@@ -97,7 +96,7 @@
         @media (max-width: 510px) {
     .col-image img {
         height: 200px;
-        width: auto; /* Ensures the aspect ratio is maintained */
+        width: auto; 
     }
     .content-container {
         padding-left: 0px;
