--- a/Project2/index.html
+++ b/Project2/index.html
@@ -37,7 +37,7 @@
 
       <!-- Image Column -->
       <div class="md:w-5/12 flex justify-center items-center  mb-0">
-        <img src="/Project2/old.png" alt="mockup" class="sm:w-50 md:w-72 lg:w-96 xl:w-[400px]">
+      <img src="old.png" alt="mockup" class="sm:w-50 md:w-72 lg:w-96 xl:w-[400px]">
       </div>
 
       <!-- Text Column -->
