--- a/Project2/index.html
+++ b/Project2/index.html
@@ -80,7 +80,7 @@
 
       <!-- Image content -->
       <div class="flex items-center justify-center md:col-span-1  lg:col-span-5">
-        <img src="/images/pic1.png" 
+        <img src="pic1.png" 
             class="w-40 md:w-3/4 rounded-full h-auto p-3 object-cover  ">
     </div>
     
