--- a/Project2/index.html
+++ b/Project2/index.html
@@ -80,8 +80,8 @@
 
       <!-- Image content -->
       <div class="flex items-center justify-center md:col-span-1  lg:col-span-5">
-        <img src="pic1.png" 
-            class="w-40 md:w-3/4 rounded-full h-auto p-3 object-cover  ">
+        <img src="images/pic1.png" class="w-40 md:w-3/4 rounded-full h-auto p-3 object-cover">
+
     </div>
     
     </div>
