Changes in Project 3

--- a/Project3/index.html
+++ b/Project3/index.html
@@ -10,23 +10,26 @@
     p{
       font-size: 10px;
     }
+    .bg-lightpink {
+            background-color: rgb(230, 155, 155);
+        }
   </style>
   
 </head>
 <body class="bg-black" >
   <div class="absolute top-0 left-0 mx-auto  right-0 w-[1041px] h-full z-1 grid grid-cols-12 gap-[12px] opacity-20">
-    <div class=" bg-pink-500"></div>
-    <div class=" bg-pink-500"></div>
-    <div class=" bg-pink-500"></div>
-    <div class=" bg-pink-500"></div>
-    <div class=" bg-pink-500"></div>
-    <div class=" bg-pink-500"></div>
-    <div class=" bg-pink-500"></div>
-    <div class=" bg-pink-500"></div>
-    <div class=" bg-pink-500"></div>
-    <div class=" bg-pink-500"></div>
-    <div class=" bg-pink-500"></div>
-    <div class=" bg-pink-500"></div>
+    <div class=" bg-lightpink"></div>
+    <div class=" bg-lightpink"></div>
+    <div class=" bg-lightpink"></div>
+    <div class=" bg-lightpink"></div>
+    <div class=" bg-lightpink"></div>
+    <div class=" bg-lightpink"></div>
+    <div class=" bg-lightpink"></div>
+    <div class=" bg-lightpink"></div>
+    <div class=" bg-lightpink"></div>
+    <div class=" bg-lightpink"></div>
+    <div class=" bg-lightpink"></div>
+    <div class=" bg-lightpink"></div>
   </div>
   <div class="bg-teal-700 w-[1041px] h-[100vh] mx-auto p-6 px-10">
   
@@ -36,12 +39,12 @@
   <div class="max-w-7xl mx-auto bg-white w-[861px] h-[635px] rounded-xl shadow-lg p-8 flex flex-col gap-8">
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
       <div class="bg-white rounded-lg">
-        <img src="team-member-5@2x.webp" alt="Profile Picture" class="rounded-lg object-cover w-full h-[342px]">
-        <div class="mt-4 text-start pl-12	  text-gray-700">
-          <p  ><strong>Age:</strong> 28 Year Old</p>
-          <p  ><strong>Location:</strong> San Francisco</p>
-          <p  ><strong>Education:</strong> Computer Science</p>
-          <p  ><strong>Job Title:</strong> Game Developer</p>
+        <img src="imageWomen.jpg" alt="Profile Picture" class="rounded-lg object-cover w-full h-[339px]">
+        <div class="mt-4 text-start pl-14	  text-gray-700">
+          <p  ><strong style="margin-right: 87px;">Age:</strong> 28 Year Old</p>
+          <p  ><strong style="margin-right: 56px;">Location:</strong> San Francisco</p>
+          <p  ><strong style="margin-right: 30px;" >Education:</strong> Computer Science</p>
+          <p  ><strong style="margin-right: 41px;" >Job Title:</strong> Game Developer</p>
         </div>
       </div>
 
@@ -53,9 +56,9 @@
           </p>
         </div>
       
-        <div class="bg-orange-600 py-10 px-8 rounded-lg w-[358px] h-[260px] flex-none shadow-lg -translate-x-14 opacity-80">
+        <div style="background-color: rgb(254, 117, 82);" class=" py-10 ml-2 px-8 rounded-lg w-[348px] h-[260px] flex-none shadow-lg -translate-x-14 ">
           <blockquote class="text-white italic text-[12px]">
-            <span class="text-[79px] leading-none">“</span> Problems will come up. Your willpower will run out. Like mana or stamina, willpower is finite... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus ipsum alias qui ullam sint modi deserunt obcaecati et, quae iste saepe.deserunt obcaecati et, quae iste saepe.
+            <span class="p-0 leading-none"><img src="Inverted.png" class="mb-4" alt=""></span> Problems will come up. Your willpower will run out. Like mana or stamina, willpower is finite... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus ipsum alias qui ullam sint modi deserunt obcaecati et, quae iste saepe.deserunt obcaecati et, quae iste saepe.
           </blockquote>
           
         </div>
@@ -92,15 +95,15 @@
 
 <div class="flex flex-row h-20 gap-8">
   <div class="flex-1">
-    <h3 class="font-bold text-teal-700">Personality</h3>
-    <div class="grid grid-cols-3 gap-y-2 gap-4">
+    <h3 class="font-bold text-teal-700"> Personality</h3>
+    <div class="grid grid-cols-3 gap-y-2 gap-3">
       <div>
         <div class="flex justify-between text-gray-700">
-          <span>Introvert</span>
-          <span>Extrovert</span>
+          <span style="font-size: 12px;" >Introvert</span>
+          <span style="font-size: 12px;" >Extrovert</span>
         </div>
         <div class="relative">
-          <div class="h-1 bg-gray-300 relative">
+          <div class="h-1 bg-orange-500 opacity-60 relative">
             <div class="w-1/2 h-1 bg-orange-500"></div>          
             <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-orange-500 w-4 h-4 rounded-full"></div>
           </div>
@@ -109,11 +112,11 @@
 
       <div>
         <div class="flex justify-between text-gray-700">
-          <span>Independent</span>
-          <span>Team Player</span>
+          <span style="font-size: 12px;" >Independent</span>
+          <span style="font-size: 12px;" >Team Player</span>
         </div>
         <div class="relative">
-          <div class="h-1 bg-gray-300">
+          <div class="h-1 bg-orange-500 opacity-60">
             <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-orange-500 w-4 h-4 rounded-full"></div>
             <div class="w-1/2 h-1 bg-orange-500"></div>
           </div>
@@ -122,11 +125,11 @@
 
       <div>
         <div class="flex justify-between text-gray-700">
-          <span>Busy</span>
-          <span>Time Rich</span>
+          <span style="font-size: 12px;" >Busy</span>
+          <span style="font-size: 12px;" >Time Rich</span>
         </div>
         <div class="relative">
-          <div class="h-1 bg-gray-300">
+          <div class="h-1 bg-orange-500 opacity-60">
             <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-orange-500 w-4 h-4 rounded-full"></div>
             <div class="w-1/2 h-1 bg-orange-500"></div>
           </div>
@@ -135,11 +138,11 @@
 
       <div>
         <div class="flex justify-between text-gray-700">
-          <span>Analytical</span>
-          <span>Creative</span>
+          <span style="font-size: 12px;" >Analytical</span>
+          <span style="font-size: 12px;" >Creative</span>
         </div>
         <div class="relative">
-          <div class="h-1 bg-gray-300 relative">
+          <div class="h-1 bg-orange-500 opacity-60 relative">
             <div class="w-1/2 h-1 bg-orange-500"></div>
             <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-orange-500 w-4 h-4 rounded-full"></div>
           </div>
@@ -147,11 +150,11 @@
       </div>
       <div>
         <div class="flex justify-between text-gray-700">
-          <span>Analytical</span>
-          <span>Creative</span>
+          <span style="font-size: 12px;" >Analytical</span>
+          <span style="font-size: 12px;" >Creative</span>
         </div>
         <div class="relative">
-          <div class="h-1 bg-gray-300 relative">
+          <div class="h-1 bg-orange-500 opacity-60 relative">
             <div class="w-1/2 h-1 bg-orange-500"></div>
             <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-orange-500 w-4 h-4 rounded-full"></div>
           </div>
@@ -159,12 +162,12 @@
       </div>
       <div>
         <div class="flex justify-between text-gray-700">
-          <span>Analytical</span>
-          <span>Creative</span>
+          <span style="font-size: 12px;" >Analytical</span>
+          <span style="font-size: 12px;" >Creative</span>
         </div>
         <div class="relative">
-          <div class="h-1 bg-gray-300 relative">
-            <div class="w-1/2 h-1 bg-orange-500"></div>
+          <div class="h-1 bg-orange-500 opacity-60 relative">
+            <div class="w-1/2 h-1 "></div>
             <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-orange-500 w-4 h-4 rounded-full"></div>
           </div>
         </div>
@@ -173,8 +176,8 @@
     </div>
   </div>
 
-  <div class="flex items-end overflow-visible translate-y-10 h-full">
-    <img src="pngwing.com (4).png" class="h-36 z-0 translate-x-20" alt="">
+  <div class="flex items-end overflow-visible translate-y-24 h-full">
+    <img src="imageChair.png" class="h-52 z-0 translate-x-20" alt="">
   </div>
 </div>
 
