Minor changes in project 3

--- a/Project3/index.html
+++ b/Project3/index.html
@@ -13,6 +13,14 @@
     .bg-lightpink {
             background-color: rgb(230, 155, 155);
         }
+
+      .customOrange{
+         background-color: rgb(255, 91, 49);
+      }
+      .customOrangelight{
+         background-color: rgba(255, 90, 49, 0.181);
+      }
+
   </style>
   
 </head>
@@ -50,13 +58,13 @@
 
       <div class="flex flex-col gap-6 overflow-x-visible">
         <div>
-          <h3 class=" font-bold text-teal-700 ">About Me</h3>
+          <h3 class=" font-bold text-black ">About Me</h3>
           <p class="text-gray-700">
             She is often referred to as the first superstar computer games developer. He broke the monotony in the video game industry by producing a creative adventurous sandbox video game. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est eos natus cumque deserunt sint quidem consectetur, libero placeat ducimus et exercitationem numquam nesciunt nemo distinctio eligendi 
           </p>
         </div>
       
-        <div style="background-color: rgb(254, 117, 82);" class=" py-10 ml-2 px-8 rounded-lg w-[348px] h-[260px] flex-none shadow-lg -translate-x-14 ">
+        <div style="background-color: rgb(255, 91, 49);" class=" py-10 ml-2 px-8 rounded-lg w-[341px] h-[260px] flex-none shadow-lg -translate-x-14 ">
           <blockquote class="text-white italic text-[12px]">
             <span class="p-0 leading-none"><img src="Inverted.png" class="mb-4" alt=""></span> Problems will come up. Your willpower will run out. Like mana or stamina, willpower is finite... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus ipsum alias qui ullam sint modi deserunt obcaecati et, quae iste saepe.deserunt obcaecati et, quae iste saepe.
           </blockquote>
@@ -67,19 +75,19 @@
 
       <div class="flex flex-col ml-[28px] gap-6">
         <div>
-          <h3 class=" font-bold text-teal-700 mb-2">Goals</h3>
+          <h3 class=" font-bold text-black mb-2">Goals</h3>
           <p class="text-gray-700">
             I always love to collect minimal and modern furniture for my home and workplace. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam iure corporis culpa amet possimus similique, earum libero nemo consequatur eaque odit dolorem voluptas temporibus debitis assumenda quas ea
           </p>
         </div>
         <div>
-          <h3 class=" font-bold text-teal-700 mb-2">Needs</h3>
+          <h3 class=" font-bold text-black mb-2">Needs</h3>
           <p class="text-gray-700">
             Current app UI is messy. I need to improve the user interface to make it more organized and intuitive. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident nostrum reiciendis iure sit eius veritatis libero
           </p>
         </div>
         <div>
-          <h3 class=" font-bold text-teal-700 mb-2">Pain Point</h3>
+          <h3 class=" font-bold text-black mb-2">Pain Point</h3>
           <ul class="text-gray-700 list-disc ml-4">
             <li style="font-size: 12px;" >Can't find the product size in the app UI.</li>
             <li style="font-size: 12px;" >I can't track my order properly.</li>
@@ -95,80 +103,80 @@
 
 <div class="flex flex-row h-20 gap-8">
   <div class="flex-1">
-    <h3 class="font-bold text-teal-700"> Personality</h3>
+    <h3 class="font-bold text-black"> Personality</h3>
     <div class="grid grid-cols-3 gap-y-2 gap-3">
       <div>
-        <div class="flex justify-between text-gray-700">
-          <span style="font-size: 12px;" >Introvert</span>
-          <span style="font-size: 12px;" >Extrovert</span>
+        <div class="flex justify-between mb-1 text-gray-700">
+          <span style="font-size: 10px;" >Introvert</span>
+          <span style="font-size: 10px;" >Extrovert</span>
         </div>
         <div class="relative">
-          <div class="h-1 bg-orange-500 opacity-60 relative">
-            <div class="w-1/2 h-1 bg-orange-500"></div>          
-            <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-orange-500 w-4 h-4 rounded-full"></div>
+          <div class="h-0.5 customOrangelight  relative">
+            <div class="w-1/2 h-0.5 "></div>          
+            <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 customOrange w-3 h-3 rounded-full"></div>
           </div>
         </div>
       </div>
 
       <div>
-        <div class="flex justify-between text-gray-700">
-          <span style="font-size: 12px;" >Independent</span>
-          <span style="font-size: 12px;" >Team Player</span>
+        <div class="flex justify-between mb-1 text-gray-700">
+          <span style="font-size: 10px;" >Independent</span>
+          <span style="font-size: 10px;" >Team Player</span>
         </div>
         <div class="relative">
-          <div class="h-1 bg-orange-500 opacity-60">
-            <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-orange-500 w-4 h-4 rounded-full"></div>
-            <div class="w-1/2 h-1 bg-orange-500"></div>
+          <div class="h-0.5 customOrangelight ">
+            <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 customOrange w-3 h-3 rounded-full"></div>
+            <div class="w-1/2 h-0.5 "></div>
           </div>
         </div>
       </div>
 
       <div>
-        <div class="flex justify-between text-gray-700">
-          <span style="font-size: 12px;" >Busy</span>
-          <span style="font-size: 12px;" >Time Rich</span>
+        <div class="flex justify-between mb-1 text-gray-700">
+          <span style="font-size: 10px;" >Busy</span>
+          <span style="font-size: 10px;" >Time Rich</span>
         </div>
         <div class="relative">
-          <div class="h-1 bg-orange-500 opacity-60">
-            <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-orange-500 w-4 h-4 rounded-full"></div>
-            <div class="w-1/2 h-1 bg-orange-500"></div>
+          <div class="h-0.5 customOrangelight ">
+            <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 customOrange w-3 h-3 rounded-full"></div>
+            <div class="w-1/2 h-0.5 "></div>
           </div>
         </div>
       </div>
 
       <div>
-        <div class="flex justify-between text-gray-700">
-          <span style="font-size: 12px;" >Analytical</span>
-          <span style="font-size: 12px;" >Creative</span>
+        <div class="flex justify-between mb-1 text-gray-700">
+          <span style="font-size: 10px;" >Analytical</span>
+          <span style="font-size: 10px;" >Creative</span>
         </div>
         <div class="relative">
-          <div class="h-1 bg-orange-500 opacity-60 relative">
-            <div class="w-1/2 h-1 bg-orange-500"></div>
-            <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-orange-500 w-4 h-4 rounded-full"></div>
+          <div class="h-0.5 customOrangelight  relative">
+            <div class="w-1/2 h-0.5 "></div>
+            <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 customOrange w-3 h-3 rounded-full"></div>
           </div>
         </div>
       </div>
       <div>
-        <div class="flex justify-between text-gray-700">
-          <span style="font-size: 12px;" >Analytical</span>
-          <span style="font-size: 12px;" >Creative</span>
+        <div class="flex justify-between mb-1 text-gray-700">
+          <span style="font-size: 10px;" >Analytical</span>
+          <span style="font-size: 10px;" >Creative</span>
         </div>
         <div class="relative">
-          <div class="h-1 bg-orange-500 opacity-60 relative">
-            <div class="w-1/2 h-1 bg-orange-500"></div>
-            <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-orange-500 w-4 h-4 rounded-full"></div>
+          <div class="h-0.5 customOrangelight  relative">
+            <div class="w-1/2 h-0.5 "></div>
+            <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 customOrange w-3 h-3 rounded-full"></div>
           </div>
         </div>
       </div>
       <div>
-        <div class="flex justify-between text-gray-700">
-          <span style="font-size: 12px;" >Analytical</span>
-          <span style="font-size: 12px;" >Creative</span>
+        <div class="flex justify-between mb-1 text-gray-700">
+          <span style="font-size: 10px;" >Analytical</span>
+          <span style="font-size: 10px;" >Creative</span>
         </div>
-        <div class="relative">
-          <div class="h-1 bg-orange-500 opacity-60 relative">
-            <div class="w-1/2 h-1 "></div>
-            <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-orange-500 w-4 h-4 rounded-full"></div>
+        <div class="relative    ">
+          <div class="h-0.5 customOrangelight   relative">
+            <div class="w-1/2 h-0.5   "></div>
+            <div class="absolute top-1/2 left-1/2   transform -translate-x-1/2 -translate-y-1/2 customOrange w-3 h-3 rounded-full"></div>
           </div>
         </div>
       </div>
