--- a/Project3/index.html
+++ b/Project3/index.html
@@ -47,8 +47,8 @@
 
 
 
-  <div class="max-w-7xl mx-auto bg-white w-[861px] h-[635px] rounded-xl shadow-lg p-8 flex flex-col gap-8">
-    <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
+  <div class="max-w-7xl mx-auto mt-5 bg-white w-[861px] h-[600px] rounded-xl shadow-lg p-8 flex flex-col gap-8">
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
       <div class="bg-white rounded-lg">
         <img src="imageWomen.jpg" alt="Profile Picture" class="rounded-lg object-cover w-full h-[339px]">
         <div class="mt-4 text-start pl-14	  text-gray-700">
@@ -60,7 +60,7 @@
       </div>
 
       <div class="flex flex-col gap-6 overflow-x-visible">
-        <div class="pl-10" >
+        <div class="pl-12" >
           <h3 class=" font-bold text-black ">About Me</h3>
           <p class="text-gray-700">
             She is often referred to as the first superstar computer games developer. He broke the monotony in the video game industry by producing a creative adventurous sandbox video game,allowing players to create,craft and mine.His passion for developing and producing a virtual lego game ,with endless building possibilities, kept him engaged with programming to great extend.
@@ -82,9 +82,9 @@
       </div>
       
 
-      <div class="flex flex-col ml-[28px] gap-2">
+      <div class="flex flex-col ml-[40px] gap-2">
         <div>
-          <h3 class=" font-bold text-black mb-2">Goals</h3>
+          <h3 class=" font-bold text-black  mb-2">Goals</h3>
           <p class="text-gray-700">
             I always love to collect minimal and modern furniture for my home and specially for my work place .Due to covid situation as i need to work from home so now a days it's mandatory for me to think more creativily within my work place so minimal colored furniture will help me a lot in this case.
           </p>
@@ -111,7 +111,7 @@
 
 
 
-<div class="flex flex-row h-20 gap-8">
+<div class="flex flex-row h-20 gap-10">
   <div class="flex-1">
     <h3 class="font-bold text-black"> Personality</h3>
     <div class="grid grid-cols-3 gap-y-2 gap-3">
@@ -194,8 +194,8 @@
     </div>
   </div>
 
-  <div class="flex items-end overflow-visible translate-y-16 h-full">
-    <img src="imageChair.png" class="h-52 z-0 translate-x-24" alt="">
+  <div class="flex items-end overflow-visible translate-y-8 h-full">
+    <img src="imageChair.png" class="h-48 z-0 translate-x-24" alt="">
   </div>
 </div>
 
